--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "node": "14"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/node": "^15.0.2",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   },
   "scripts": {
+    "start": "ts-node-dev --no-notify --watch .env --exit-child --ignore-watch node_modules --transpile-only src/main.ts",
     "build": "tsc"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
