--- a/package.json
+++ b/package.json
@@ -2,21 +2,35 @@
   "name": "crypto-portfolio",
   "version": "1.0.0",
   "main": "dist/main.ts",
+  "types": "dist/main.d.ts",
   "repository": "git@github.com:andrewszucs/crypto-portfolio.git",
   "author": "Andras Szucs <andrew0szucs@gmail.com>",
   "license": "MIT",
   "engines": {
     "node": "14"
   },
+  "scripts": {
+    "build": "tsc",
+    "start": "ts-node-dev --no-notify --watch .env --exit-child --ignore-watch node_modules --transpile-only src/main.ts",
+    "lint": "eslint src --ext js,ts"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
+  },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^15.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-node": "^11.1.0",
+    "husky": "^6.0.0",
+    "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
-  },
-  "scripts": {
-    "start": "ts-node-dev --no-notify --watch .env --exit-child --ignore-watch node_modules --transpile-only src/main.ts",
-    "build": "tsc"
   },
   "dependencies": {
     "express": "^4.17.1"
