--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "env": {
-    "es2021": true,
-    "node": true
+    "es2020": true,
+    "node": true,
+    "jest": true
   },
   "extends": [
     "eslint:recommended",
@@ -11,8 +12,8 @@
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 12,
-    "project": "tsconfig.json"
+    "ecmaVersion": 11,
+    "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
@@ -34,5 +35,6 @@
       "error",
       { "ignores": ["modules"] }
     ]
-  }
+  },
+  "ignorePatterns": ["node_modules", "dist", "coverage", ".env"]
 }
