--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-node": "^11.1.0",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
+    "jest-github-actions-reporter": "^1.0.3",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.6",
     "ts-node-dev": "^1.1.6",
