--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,22 +46,10 @@ jobs:
         run: |
           yarn test --reporters=default --reporters=jest-github-actions-reporter --coverage
 
-      - name: "Test Coverage (master)"
-        if: github.ref == 'refs/heads/master'
-        uses: mattallty/jest-github-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: "Test Coverage"
+        uses: artiomtr/jest-coverage-report-action@v1.3
         with:
-          test-command: "yarn test:coverage"
-          coverage-comment: false
-
-      - name: "Test Coverage (PR)"
-        if: github.ref != 'refs/heads/master'
-        uses: mattallty/jest-github-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          test-command: "yarn test:coverage"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: "Typecheck"
         run: yarn typecheck
